--- a/Gradient_Descent_Combined.ipynb
+++ b/Gradient_Descent_Combined.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 815,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,37 +12,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 816,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = np.genfromtxt(\"training_boston_x_y_train.csv\", delimiter=\",\")\n",
-    "df_test = np.genfromtxt(\"test_boston_x_test.csv\", delimiter=\",\")"
+    "df_train = np.genfromtxt(\"training_ccpp_x_y_train.csv\", delimiter=\",\")\n",
+    "df_test = np.genfromtxt(\"test_ccpp_x_test.csv\", delimiter=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 817,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = df_train[:, 0:13]\n",
+    "x_train = df_train[:, 0:-1]\n",
     "y_train = df_train[:, -1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cost(x_train, y_train, m):\n",
-    "    return ((y_train - (x_train * m).sum(axis=1)) ** 2).mean()"
+    "from sklearn import preprocessing as pp\n",
+    "\n",
+    "scaled = pp.StandardScaler()\n",
+    "scaled.fit(x_train)\n",
+    "x_train = scaled.transform(x_train)\n",
+    "\n",
+    "df_test = scaled.transform(df_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 818,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 819,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,32 +78,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 820,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run():\n",
-    "    learning_rate = 0.05\n",
-    "    num_iterations = 300\n",
-    "    df = pd.DataFrame(df_train)\n",
-    "    df[df_train.shape[1] - 1] = 1\n",
+    "    learning_rate = 0.01\n",
+    "    num_iterations = 500\n",
+    "\n",
+    "    df = pd.DataFrame(x_train)\n",
+    "    df[x_train.shape[1]] = 1\n",
     "    x = df.values\n",
+    "\n",
     "    m = gd(x, y_train, learning_rate, num_iterations)\n",
+    "\n",
     "    return m[0:-1], m[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 821,
+   "execution_count": 322,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-12.02133762  -5.01166646   0.89853625  -1.39384519] 454.41265061693235\n"
+     ]
+    }
+   ],
    "source": [
-    "m, c = run()"
+    "m, c = run()\n",
+    "print(m, c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 822,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 823,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 824,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 825,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = np.around(y_pred, decimals=5)\n",
     "\n",
-    "file = np.savetxt(\"prediction.csv\", y_pred, delimiter=\", \")"
+    "file = np.savetxt(\"prediction_ccpp.csv\", y_pred, delimiter=\", \")"
    ]
   },
   {
